# django-api-template

./: cookiecutter.json
hooks/: pre_prompt.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/api/: admin.py  urls.py
{{ cookiecutter.project_slug }}/api/cars/: serializers.py  urls.py  views.py
{{ cookiecutter.project_slug }}/api/models/: car.py
{{ cookiecutter.project_slug }}/app/: asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/tests/: test_cars.py
