[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
requires-python = ">={{ cookiecutter.python_version }}"

dependencies = [
    "django=={{ cookiecutter.django_version }}",
    "djangorestframework=={{ cookiecutter.drf_version }}",
    "python-dotenv",
    "djangorestframework-simplejwt", # For token authentication
    "drf-spectacular", # Add this line for Swagger/OpenAPI docs
]

[project.optional-dependencies]
dev = [
    "uv",
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-django",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "PL", # pylint
    "N",  # pep8-naming
    "D",  # pydocstyle (optional, can be removed if not needed)
]
lint.ignore = [
    "E501", # Line too long (correctly ignored as ruff-format handles this, or `line-length` applies)
    "D100", # Missing docstrings on public modules
    "D101", # Missing docstrings on public classes (if you want to ignore it, keep this. Otherwise, remove it to enforce docstrings)
    "D102", # Missing docstring in public method
    "D104", # Missing docstrings on __init__.py files
    "D105", # Missing docstrings on magic methods (e.g., __str__)
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstrings on __init__ methods
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Recommended: "google", "numpy", or "pep257"

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}", "api", "app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
line-ending = "auto"
